fix: branding changes

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Halp UI Registry
+title: PB UI Registry
 description: A collection of reusable React components built with shadcn/ui and Base UI primitives.
 hero:
   tagline: Reusable components built with Base UI and Tailwind v4.
